// Vitest Snapshot v1

exports[`Link changes the class when hovered > default 1`] = `
<div>
  <a
    class="normal"
    href="https://yrnana.dev"
  >
    Yuri Na
  </a>
</div>
`;

exports[`Link changes the class when hovered > hover 1`] = `
<div>
  <a
    class="hovered"
    href="https://yrnana.dev"
  >
    Yuri Na
  </a>
</div>
`;

exports[`Link changes the class when hovered > unhover 1`] = `
<div>
  <a
    class="normal"
    href="https://yrnana.dev"
  >
    Yuri Na
  </a>
</div>
`;
